# redmine-cli

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  package.json
.github/workflows/: ci.yml  release.yml
crates/redmine-cli/: Cargo.toml
crates/redmine-cli/src/: cli.rs  config.rs  error.rs  main.rs  output.rs  redmine_client.rs
crates/redmine-cli/src/commands/: config.rs  context.rs  issues.rs  mod.rs  projects.rs  update.rs
docs/: architecture.md
npm/redmine-cli/: package.json
npm/redmine-cli-darwin-arm64/: package.json
npm/redmine-cli-linux-x64/: package.json
npm/redmine-cli-win32-x64/: package.json
