[workspace]
members = ["crates/redmine-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/redmine-cli"
description = "Agent-friendly Redmine CLI"
readme = "README.md"
keywords = ["redmine", "cli", "agent"]
categories = ["api-bindings", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
